--- a/css/style.css
+++ b/css/style.css
@@ -548,3 +548,140 @@ h6,
     padding-right: 0;
     border-right: none;
 }
+
+body {
+    font-family: 'Raleway', sans-serif;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    overflow: auto;
+    font-weight: 300;
+  }
+  
+  .main {
+    margin: 7rem auto;
+  }
+  
+  .all {
+    display: flex;
+    perspective: 10px;
+    transform: perspective(300px) rotateX(20deg);
+    will-change: perspective;
+    perspective-origin: center center;
+    transition: transform 1.3s ease-out, perspective 1.3s ease-out;
+    justify-content: center;
+    transform-style: preserve-3d;
+  }
+  
+  .all:hover {
+    perspective: 1000px;
+    transform: perspective(10000px) rotateX(0deg);
+  }
+  
+  .all:hover .text {
+    opacity: 1;
+    transition: opacity 0.3s ease;
+  }
+  
+  .all:hover > div {
+    opacity: 1;
+    transition: opacity 0.3s ease, transition-delay 0.3s ease;
+  }
+  
+  .all:hover .center-box {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  
+  .left, .center, .right, .lefter, .righter {
+    width: 230px;
+    transform-style: preserve-3d;
+    border-radius: 10px;
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    position: relative;
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    background-blend-mode: color-burn;
+  }
+  
+  .text {
+    transform: translateY(30px);
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    bottom: 0;
+    left: 5px;
+    position: absolute;
+    will-change: transform;
+    color: #fff;
+    text-shadow: 0 0 5px rgba(100, 100, 255, .6);
+  }
+  
+  .lefter {
+    transform: translateX(-60px) translateZ(-50px) rotateY(-10deg);
+  }
+  
+  .left {
+    transform: translateX(-30px) translateZ(-25px) rotateY(-5deg);
+  }
+  
+  .center {
+    opacity: 1;
+    background-image: url(https://img.freepik.com/free-vector/interaction-design-concept-illustration_114360-1442.jpg);
+    box-shadow: 0 0 30px 10px rgba(35, 64, 224, 0.6);
+  }
+  
+  .right {
+    transform: translateX(30px) translateZ(-25px) rotateY(5deg);
+  }
+  
+  .righter {
+    transform: translateX(60px) translateZ(-50px) rotateY(10deg);
+  }
+  
+  .center-box {
+    font-weight: 300;
+    font-size: 2rem;
+    color: #fff;
+    transition: background-color 0.6s ease, color 0.6s ease, opacity 0.6s ease;
+    width: 100%;
+    height: 100%;
+    background-color: #303050;
+    background-image: radial-gradient(circle at center top, #ff542114, #2125ff);
+    border-radius: 10px;
+    text-shadow: 0 0 10px rgba(255, 255, 255, .8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .section-10 .box {
+    transition: background-color 0.4s ease, border 0.4s ease, box-shadow 0.4s ease;
+    box-shadow: 0 0 150px rgba(0, 0, 0, 0.1);
+    border: 1px solid #00000012;
+  }
+  
+  .section-10 .box i {
+    color: #2125ff; /* Set Font Awesome icon color to blue */
+  }
+  
+  .section-10 .box:hover {
+    background: #2125ff;
+    border: 1px solid #2125ff;
+  }
+  
+  .section-10 .box:hover i {
+    color: #fff; /* Change Font Awesome icon color to white on hover */
+  }
+  
+  .section-10 .box:hover h6 {
+    color: #fff;
+  }
+  
+  h1 {
+    color: #2125ff;
+    transition: color 0.3s ease;
+  }
+  
